@@ -466,9 +466,9 @@ class UnionTypeVisitor extends AnalysisVisitor
     public function visitNullableType(Node $node) : UnionType
     {
         // Get the type
-        $union_type = UnionType::fromNode(
-            $this->context,
+        $union_type = UnionTypeVisitor::unionTypeFromNode(
             $this->code_base,
+            $this->context,
             $node->children['type'],
             $this->should_catch_issue_exception
         );
@@ -477,6 +477,27 @@ class UnionTypeVisitor extends AnalysisVisitor
         return $union_type->asMappedUnionType(function (Type $type) : Type {
             return $type->withIsNullable(true);
         });
+    }
+
+    /**
+     * @param int|float|string|Node $node
+     * @return ?UnionType
+     */
+    public static function unionTypeFromLiteralOrConstant(CodeBase $code_base, Context $context, $node) {
+        if ($node instanceof Node) {
+            // TODO: Could check for arrays of constants or literals, and convert those to the generic array types
+            if ($node->kind === \ast\AST_CONST || $node->kind === \ast\AST_CLASS_CONST) {
+                try {
+                    return UnionTypeVisitor::unionTypeFromNode($code_base, $context, $node, false);
+                } catch(IssueException $e) {
+                    return null;
+                }
+            }
+            return null;
+        }
+        // Otherwise, this is an int/float/string.
+        assert(is_scalar($node), 'node must be Node or scalar');
+        return Type::fromObject($node)->asUnionType();
     }
 
     /**
@@ -511,6 +532,7 @@ class UnionTypeVisitor extends AnalysisVisitor
         assert(is_scalar($cond), 'cond must be Node or scalar');
         return (bool)$cond;
     }
+
     /**
      * Visit a node with kind `\ast\AST_CONDITIONAL`
      *
@@ -538,9 +560,9 @@ class UnionTypeVisitor extends AnalysisVisitor
             // TODO: Add no-op checks in another PR, if they don't already exist for conditional.
             if ($cond_truthiness === true) {
                 // The condition is unconditionally true
-                return UnionType::fromNode(
-                    $this->context,
+                return UnionTypeVisitor::unionTypeFromNode(
                     $this->code_base,
+                    $this->context,
                     $node->children['trueExpr'] ??
                         $node->children['true'] ??
                             $cond_node
@@ -549,9 +571,9 @@ class UnionTypeVisitor extends AnalysisVisitor
                 // The condition is unconditionally false
 
                 // Add the type for the 'false' side
-                return UnionType::fromNode(
-                    $this->context,
+                return UnionTypeVisitor::unionTypeFromNode(
                     $this->code_base,
+                    $this->context,
                     $node->children['falseExpr'] ??
                         $node->children['false'] ?? ''
                 );
@@ -571,15 +593,15 @@ class UnionTypeVisitor extends AnalysisVisitor
             $true_context = $this->context;
         }
 
-        $true_type = UnionType::fromNode(
-            $true_context,
+        $true_type = UnionTypeVisitor::unionTypeFromNode(
             $this->code_base,
+            $true_context,
             $true_node
         );
 
-        $false_type = UnionType::fromNode(
-            $this->context,
+        $false_type = UnionTypeVisitor::unionTypeFromNode(
             $this->code_base,
+            $this->context,
             $node->children['falseExpr'] ??
                 $node->children['false'] ?? ''
         );
@@ -635,9 +657,9 @@ class UnionTypeVisitor extends AnalysisVisitor
                 }
 
                 if ($node->children[$i]->children['value'] instanceof Node) {
-                    $element_types[] = UnionType::fromNode(
-                        $this->context,
+                    $element_types[] = UnionTypeVisitor::unionTypeFromNode(
                         $this->code_base,
+                        $this->context,
                         $node->children[$i]->children['value'],
                         $this->should_catch_issue_exception
                     );
@@ -724,7 +746,7 @@ class UnionTypeVisitor extends AnalysisVisitor
     public function visitCast(Node $node) : UnionType
     {
         // TODO: Check if the cast is allowed based on the right side type
-        UnionType::fromNode($this->context, $this->code_base, $node->children['expr']);
+        UnionTypeVisitor::unionTypeFromNode($this->code_base, $this->context, $node->children['expr']);
         switch ($node->flags) {
             case \ast\flags\TYPE_NULL:
                 return NullType::instance(false)->asUnionType();
@@ -803,9 +825,9 @@ class UnionTypeVisitor extends AnalysisVisitor
 
             // Map each argument to its type
             $arg_type_list = array_map(function($arg_node) {
-                return UnionType::fromNode(
-                    $this->context,
+                return UnionTypeVisitor::unionTypeFromNode(
                     $this->code_base,
+                    $this->context,
                     $arg_node
                 );
             }, $node->children['args']->children ?? []);
@@ -838,7 +860,7 @@ class UnionTypeVisitor extends AnalysisVisitor
     public function visitInstanceOf(Node $node) : UnionType
     {
         // Check to make sure the left side is valid
-        UnionType::fromNode($this->context, $this->code_base, $node->children['expr']);
+        UnionTypeVisitor::unionTypeFromNode($this->code_base, $this->context, $node->children['expr']);
         try {
             // Confirm that the right-side exists
             $union_type = $this->visitClassNode(
@@ -1168,9 +1190,9 @@ class UnionTypeVisitor extends AnalysisVisitor
             if ($property->getUnionType()->hasTemplateType()) {
 
                 // Get the type of the object calling the property
-                $expression_type = UnionType::fromNode(
-                    $this->context,
+                $expression_type = UnionTypeVisitor::unionTypeFromNode(
                     $this->code_base,
+                    $this->context,
                     $node->children['expr']
                 );
 
@@ -1347,9 +1369,9 @@ class UnionTypeVisitor extends AnalysisVisitor
                     if ($union_type->hasTemplateType()) {
 
                         // Get the type of the object calling the property
-                        $expression_type = UnionType::fromNode(
-                            $this->context,
+                        $expression_type = UnionTypeVisitor::unionTypeFromNode(
                             $this->code_base,
+                            $this->context,
                             $node->children['expr']
                         );
 
